--- a/code-solo.css
+++ b/code-solo.css
@@ -1,33 +1,39 @@
 /* CSS styling for code solo */
 
 /* 3. Select the sample-1 class. Using the display property, apply a value of flex. Using the justify-content property, apply a value of flex-start. */
-
+.item-1 {
+  justify-content: flex-start;
+}
 
 
 /* 4. Select the sample-2 class. Using the display property, apply a value of flex. Using the justify-content property, apply a value of space-between. */
-
+.item-2 {
+  justify-content: space-between;
+}
 
 
 /* Add the styling for the spicy task below. */
 /* The image should have a position property with value of fixed, a bottom property with a value of 10px, and a right property with a value of 10px. */
-
+.nero-bird{position: fixed;
+          bottom: 10px;
+          right: 10px;}
 
 
 
 
 /** Styling for the items of Sample 1 **/
 .item-1 {
-    margin: 5px;
-    padding: 5px;
-    border: 2px solid black;
-    background: orange;
+  margin: 5px;
+  padding: 5px;
+  border: 2px solid black;
+  background: orange;
 }
 
 /** Styling for the items of Sample 2  **/
 .item-2 {
-    margin: 5px;
-    padding: 5px;
-    border: 2px solid black;
-    background: violet;
+  margin: 5px;
+  padding: 5px;
+  border: 2px solid black;
+  background: violet;
 
 }
